Change button text from 'Siguiente' to 'Saltar'

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <input id="exInput" placeholder="Escribe tu respuesta" />
         <div class="input-actions">
           <button class="btn" id="submitAnswer">Comprobar</button>
-          <button class="btn ghost" id="skipBtn">Siguiente</button>
+          <button class="btn ghost" id="skipBtn">Saltar</button>
           <span class="counter" id="hintSpan"></span>
         </div>
       </div>
