Clarify translation instructions in Exercise 3
Updated the translation instruction for Exercise 3 to provide clearer guidance on using relative pronouns.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card">
           <div class="pill">Ejercicio 3</div>
           <h3>Traducción con relativos (20)</h3>
-          <p class="muted">Traduce (WHO, WHICH, WHOSE, WHERE, WHEN, WHY; "that" cuando se permita).</p>
+          <p class="muted">Traduce la frase completa (usa WHO, WHICH, WHOSE, WHERE, WHEN, WHY; "that" cuando se permita; puedes omitir el pronombre en algunos casos).</p>
           <button class="btn" data-start="rel">Empezar</button>
         </div>
       </div>
